--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,24 +8,28 @@
       "command": "npm run dev"
     },
     {
-      "name": "Next.js: debug client-side",
+      "name": "Brave - Next.js: debug client-side",
       "type": "chrome",
       "request": "launch",
-      "url": "http://localhost:3000"
-    },
-    {
-      "name": "Next.js: debug client-side (Firefox)",
-      "type": "firefox",
-      "request": "launch",
+      "runtimeExecutable": "/usr/bin/brave-browser",
+      //"runtimeArgs": ["--remote-debugging-port=9222"],
+      "port": 9222,
       "url": "http://localhost:3000",
-      "reAttach": true,
-      "pathMappings": [
-        {
-          "url": "webpack://_N_E",
-          "path": "${workspaceFolder}"
-        }
-      ]
+      "webRoot": "${workspaceFolder}"
     },
+    // {
+    //   "name": "Next.js: debug client-side (Firefox)",
+    //   "type": "firefox",
+    //   "request": "launch",
+    //   "url": "http://localhost:3000",
+    //   "reAttach": true,
+    //   "pathMappings": [
+    //     {
+    //       "url": "webpack://_N_E",
+    //       "path": "${workspaceFolder}"
+    //     }
+    //   ]
+    // },
     {
       "name": "Next.js: debug full stack",
       "type": "node",
